fix header & footer z-index

--- a/src/css/components.scss
+++ b/src/css/components.scss
@@ -24,6 +24,7 @@
 		.tl-header-container {
 			box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 			position: relative;
+			z-index: 10;
 
 			.tl-header {
 				padding: 32px 20px;
@@ -140,6 +141,7 @@
 			width: 100%;
 			background-color: $white;
 			padding: 20px;
+			z-index: 10;
 		}
 
 	}
